# VoiceTransor

./: .gitignore  LICENSE  README.md  VoiceTransor.spec  install_ollama.bat  install_ollama.sh  pyproject.toml  requirements.txt  run.bat  run.py
app/: __init__.py  main.py
app/core/ai/: ollama_textops.py  openai_textops.py
app/core/audio/: chunker.py  ffprobe_utils.py
app/core/common/: workers.py
app/core/export/: pdf_exporter.py
app/core/stt/: chunked_transcriber.py  whisper_runner.py
app/core/summarize/: openai_summarizer.py
app/core/system/: thermal.py
app/i18n/: manager.py
app/i18n/locales/: voicetransor_zh_CN.qm  voicetransor_zh_CN.ts
app/ui/: main_window.py  options_dialogs.py  theme.py
app/ui/resources/: icons.qrc  resources_rc.py
app/utils/: icon_tint.py
cli/: audio_info.py  export_pdf.py  get_cpu_temp.py  stt.py  summarize.py
docs/: CHANGELOG.md  INSTALLATION.md  OLLAMA_SETUP_GUIDE.md  OLLAMA_SETUP_GUIDE_CN.md  USER_GUIDE.md  runtime-paths.md
docs/dev/: BUILD_INSTRUCTIONS.md  BUILD_OPTIMIZATION.md  DISTRIBUTION_GUIDE.md  README_DEV.md
docs/zh-CN/: INSTALLATION.md  README.md
installer/: installer.iss
scripts/: README.md  build_all.bat  clean_build.bat  run.bat
